hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/success/testCompilerSuccess0006.hl
def m(int x)-> x+1;
var h=m(3);