hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0009.hl
var h=m();
def m()-> h;